--- a/about-us-ar.html
+++ b/about-us-ar.html
@@ -27,38 +27,44 @@
 <body
     class="home ar-font page-template-default page page-id-2039 gdlr-core-body woocommerce-no-js tribe-no-js kingster-body kingster-body-front kingster-full  kingster-with-sticky-navigation  kingster-blockquote-style-1 gdlr-core-link-to-lightbox">
     <div class="kingster-mobile-header-wrap">
-        <div class="kingster-mobile-header kingster-header-background kingster-style-slide kingster-sticky-mobile-navigation"
-            id="kingster-mobile-header" style="display: block;">
+        <div class="kingster-mobile-header kingster-header-background kingster-style-slide kingster-sticky-mobile-navigation "
+            id="kingster-mobile-header">
             <div class="kingster-mobile-header-container kingster-container clearfix">
                 <div class="kingster-logo  kingster-item-pdlr">
                     <div class="kingster-logo-inner">
-                        <a class="" href="index.html"><img src="img/raffles-logo.png" class="logomob" alt="" /></a>
+                        <a class="" href="index-ar.html"><img src="img/raffles-logo.png" class="logomob" alt="" /></a>
                     </div>
                 </div>
-                <div class="kingster-mobile-menu"><a
-                        class="kingster-mm-menu-button kingster-mobile-menu-button kingster-mobile-button-hamburger"
-                        href="#kingster-mobile-menu"><span></span></a>
-                    <div class="kingster-mm-menu-wrap kingster-navigation-font" id="kingster-mobile-menu"
-                        data-slide="right">
-                        <ul id="menu-main-navigation" class="m-menu">
-                            <li class="menu-item"><a href="index-ar.html">الرئيسية</a>
+                <div class="kingster-mobile-menu-right">
 
-                            </li>
-                            <li class="menu-item menu-item-home current-menu-item"><a href="about-us-ar.html">من نحن</a>
+                    <div class="kingster-mobile-menu"><a
+                            class="kingster-mm-menu-button kingster-mobile-menu-button kingster-mobile-button-hamburger"
+                            href="#kingster-mobile-menu"><span></span></a>
+                        <div class="kingster-mm-menu-wrap kingster-navigation-font" id="kingster-mobile-menu"
+                            data-slide="right">
+                            <ul id="menu-main-navigation" class="m-menu">
+                                <li class="menu-item menu-item-home text-ar1"><a
+                                        href="index-ar.html">الرئيسية</a>
 
-                            </li>
-                            <li class="menu-item"><a href="services-ar.html">خدماتنا</a>
-                            </li>
-                            <li class="menu-item"><a href="programs-ar.html">البرامج</a>
-                            </li>
+                                </li>
+                                <li class="menu-item  current-menu-item"><a href="about-us-ar.html" class="text-ar1">من نحن</a>
 
-                            <li class="menu-item"><a href="scholarships-ar.html">المنح الدراسية</a></li>
-                            <li class="menu-item"><a href="admission-ar.html">تسجيل</a></li>
-                            <li class="menu-item"><a href="lifeinriyadh-ar.html">Life in Riyadh</a></li>
-                            <li class="menu-item"><a href="collaboration-ar.html">Collaboration</a></li>
-                            <li class="menu-item"><a href="gallery-ar.html">المعرض</a></li>
-                            <li class="menu-item"><a href="contact-ar.html">تواصل معنا</a></li>
-                        </ul>
+                                </li>
+                                <li class="menu-item"><a href="services-ar.html" class="text-ar1">خدماتنا</a>
+                                </li>
+                                <li class="menu-item"><a href="programs-ar.html" class="text-ar1">البرامج</a>
+                                </li>
+
+                                <li class="menu-item"><a href="scholarships-ar.html" class="text-ar1">المنح الدراسية</a>
+                                </li>
+                                <li class="menu-item"><a href="admission-ar.html" class="text-ar1">تسجيل</a></li>
+                                <li class="menu-item"><a href="lifeinriyadh-ar.html" class="text-ar1">الحياة في
+                                        الرياض</a></li>
+                                <li class="menu-item"><a href="collaboration-ar.html" class="text-ar1">تعاون</a></li>
+                                <li class="menu-item"><a href="gallery-ar.html" class="text-ar1">المعرض</a></li>
+                                <li class="menu-item"><a href="contact-ar.html" class="text-ar1">تواصل معنا</a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -178,7 +184,7 @@
                                                     <div class="tp-loop-wrap" style="position:absolute;display:block;;">
                                                         <div class="tp-mask-wrap"
                                                             style="position: absolute; display: block; overflow: visible;">
-                                                            <div class="tp-caption tp-shape tp-shapewrapper  tp-resizeme caption1"
+                                                            <div class="tp-caption tp-shape tp-shapewrapper  tp-resizeme caption1-ar"
                                                                 id="slide-6-layer-8" data-x="637" data-y="center"
                                                                 data-voffset="-10" data-width="['754']"
                                                                 data-height="['121']" data-type="shape"
@@ -199,7 +205,7 @@
                                                     <div class="tp-loop-wrap" style="position:absolute;display:block;;">
                                                         <div class="tp-mask-wrap"
                                                             style="position: absolute; display: block; overflow: visible;">
-                                                            <div class="tp-caption abtus-ar tp-resizeme title2"
+                                                            <div class="tp-caption abtus-ar tp-resizeme title2-ar"
                                                                 id="slide-6-layer-3" data-x="500" data-y="center"
                                                                 data-voffset="-15" data-width="['auto']"
                                                                 data-height="['auto']" data-type="text"
@@ -220,7 +226,7 @@
                                                     <div class="tp-loop-wrap" style="position:absolute;display:block;;">
                                                         <div class="tp-mask-wrap"
                                                             style="position: absolute; display: block; overflow: visible;">
-                                                            <div class="tp-caption abtus-ar2 tp-resizeme title2b"
+                                                            <div class="tp-caption abtus-ar2 tp-resizeme title2b-ar"
                                                                 id="slide-6-layer-9" data-x="538" data-y="400"
                                                                 data-voffset="129" data-width="['746']"
                                                                 data-height="['auto']" data-type="text"
@@ -241,7 +247,7 @@
                                                     <div class="tp-loop-wrap" style="position:absolute;display:block;;">
                                                         <div class="tp-mask-wrap"
                                                             style="position: absolute; display: block; overflow: visible;">
-                                                            <div class="tp-caption tp-shape tp-shapewrapper  tp-resizeme line1"
+                                                            <div class="tp-caption tp-shape tp-shapewrapper  tp-resizeme line1-ar"
                                                                 id="slide-6-layer-10" data-x="539" data-y="615"
                                                                 data-voffset="201" data-width="['205']"
                                                                 data-height="['6']" data-type="shape"
@@ -317,7 +323,7 @@
                                                 <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr"
                                                     id="div_983a_4">
                                                     <div class="gdlr-core-title-item-title-wrap clearfix">
-                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title ar-float ar-font dr-font"
+                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title ar-float ar-font dr-font title7"
                                                             data-aos="fade-left" data-aos-duration="500"
                                                             data-aos-delay="200" id="h3_983a_0">د/ وفــاء الــرشــود
                                                         </h3>
@@ -340,7 +346,7 @@
                                                     <div class="gdlr-core-text-box-item-content" id="div_983a_8"
                                                         data-aos="fade-left" data-aos-duration="500"
                                                         data-aos-delay="300">
-                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title ar-float ar-font dr-font2"
+                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title ar-float ar-font dr-font2 title5"
                                                             id="h3_983a_22">الـرئـيـس الـتـنـفـيـذي</h3>
                                                         <p class="p-about ar-float ar-font">حاصلة على درجة الدكتوراه من كلية
                                                             الدراسات
@@ -407,16 +413,15 @@
                             </div>
                         </div>
                     </div>
-                    <div class="gdlr-core-pbf-wrapper " id="div_983a_21">
-                        <div class="gdlr-core-pbf-background-wrap" id="div_983a_22"></div>
+                    
+                    <div class="gdlr-core-pbf-wrapper " id="div_983a_29">
+                        <div class="gdlr-core-pbf-background-wrap" id="div_983a_30b"></div>
                         <div class="gdlr-core-pbf-wrapper-content gdlr-core-js ">
-                            <div class="gdlr-core-pbf-wrapper-container clearfix">
-                                <div class="gdlr-core-pbf-column gdlr-core-column-30 gdlr-core-column-first">
-                                    <div class="gdlr-core-pbf-column-content-margin gdlr-core-js " id="div_983a_23"
-                                        style="height: 480px;">
-                                        <div class="gdlr-core-pbf-background-wrap" id="div_983a_24"></div>
+                            <div class="gdlr-core-pbf-wrapper-container clearfix gdlr-core-container">
+                                <div class="gdlr-core-pbf-column gdlr-core-column-30 mleft-5">
+                                    <div class="gdlr-core-pbf-column-content-margin gdlr-core-js ">
                                         <div
-                                            class="gdlr-core-pbf-column-content clearfix gdlr-core-js  gdlr-core-sync-height-content vision">
+                                            class="gdlr-core-pbf-column-content clearfix gdlr-core-js  gdlr-core-sync-height-content vision" style="margin-top: 120px;">
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr"
                                                     id="div_983a_26">
@@ -444,19 +449,16 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="gdlr-core-pbf-column gdlr-core-column-30">
-                                    <div class="gdlr-core-pbf-column-content-margin gdlr-core-js  gdlr-core-column-extend-right"
-                                        style="height: 480px;">
-                                        <div class="gdlr-core-pbf-background-wrap" data-aos="fade-left"
-                                            data-aos-duration="800">
-                                            <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js"
-                                                id="div_983a_28"></div>
-                                        </div>
-                                        <div
-                                            class="gdlr-core-pbf-column-content clearfix gdlr-core-js  gdlr-core-sync-height-content">
+                                <div class="gdlr-core-pbf-column gdlr-core-column-30 gdlr-core-column-first">
+                                    <div class="gdlr-core-pbf-column-content-margin gdlr-core-js ">
+                                        <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js ">
+                                            <div class="gdlr-core-pbf-element">
+                                                <img src="img/about/about us 4-02.png" alt="" class="objective-img2 aos-init aos-animate" data-aos="fade-left" data-aos-duration="800">
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
+
                             </div>
                         </div>
                     </div>
@@ -478,7 +480,7 @@
                                     <div class="gdlr-core-pbf-column-content-margin gdlr-core-js ">
                                         <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js values">
                                             <div class="gdlr-core-pbf-element">
-                                                <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr"
+                                                <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr pad3"
                                                     id="div_983a_26">
                                                     <div class="gdlr-core-title-item-title-wrap clearfix">
                                                         <h3 class="gdlr-core-title-item-title gdlr-core-skin-title ar-float "
@@ -523,7 +525,7 @@
                                     <div class="gdlr-core-pbf-column-content-margin gdlr-core-js ">
                                         <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js values">
                                             <div class="gdlr-core-pbf-element">
-                                                <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr"
+                                                <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr pad3"
                                                     id="div_983a_26">
                                                     <div class="gdlr-core-title-item-title-wrap clearfix">
                                                         <h3 class="gdlr-core-title-item-title gdlr-core-skin-title ar-float "
@@ -582,7 +584,7 @@
                                                 <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr"
                                                     id="div_983a_19">
                                                     <div class="gdlr-core-title-item-title-wrap clearfix centerdiv">
-                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title ar-float"
+                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title ar-float title5"
                                                             data-aos="fade-down" data-aos-duration="500"
                                                             data-aos-delay="200" id="h3_983a_3b">الحـس الخـاص
                                                             بـرافـلــــز</h3>
@@ -614,7 +616,7 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="gdlr-core-pbf-column gdlr-core-column-20 sense-col width2"
+                                            <div class="gdlr-core-pbf-column gdlr-core-column-20 sense-col sense-col-ar width2"
                                                 style="width: 32%;">
                                                 <div class="gdlr-core-pbf-element">
                                                     <div
